--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test:e2e": "start-server-and-test preview http://127.0.0.1:5050/ 'cypress open'",
     "test:e2e:ci": "start-server-and-test preview http://127.0.0.1:5050/ 'cypress run'",
     "typecheck": "vue-tsc --noEmit",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "prepare": "husky install"
   },
   "dependencies": {
     "pinia": "^2.0.9",
@@ -19,6 +20,8 @@
   },
   "devDependencies": {
     "@arco-design/web-vue": "^2.14.0",
+    "@commitlint/cli": "^16.0.1",
+    "@commitlint/config-conventional": "^16.0.0",
     "@cypress/vite-dev-server": "^2.2.2",
     "@cypress/vue": "^3.1.0",
     "@rushstack/eslint-patch": "^1.1.0",
@@ -30,6 +33,7 @@
     "eslint": "^8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-vue": "^8.2.0",
+    "husky": "^7.0.4",
     "less": "^4.1.2",
     "prettier": "^2.5.1",
     "start-server-and-test": "^1.14.0",
