--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "pinia": "^2.0.9",
     "vue": "^3.2.26",
     "vue-router": "^4.0.12"
